--- a/portfolio-v5.html
+++ b/portfolio-v5.html
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Prosjektadministrasjon</p>
+        <p>© 2024 Webapplikasjoner</p>
     </footer>
 
 </body>
