--- a/portfolio-v7.html
+++ b/portfolio-v7.html
@@ -7,7 +7,6 @@
     <title>Prosjektoversikt</title>
 </head>
 <body>
-
     <header>
         <h1>Prosjektoversikt</h1>
     </header>
@@ -46,6 +45,7 @@
     <footer>
         <p>© 2024 Webapplikasjoner</p>
     </footer>
+    <script src="portfolio-v7.js"></script>
 
 </body>
 </html>
